# pixel_engine.cmake

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
epix_engine/app/: CMakeLists.txt
epix_engine/app/include/epix/: app.h
epix_engine/app/include/pixel_engine/: app.h
epix_engine/app/src/: app.cpp  command.cpp  runner.cpp  runner_tools.cpp  stage_runner.cpp  subapp.cpp  substage_runner.cpp  tools.cpp
epix_engine/app/tests/: CMakeLists.txt
epix_engine/app/tests/src/: test.cpp
epix_engine/font/: CMakeLists.txt
epix_engine/font/include/epix/: font.h
epix_engine/font/include/pixel_engine/: font.h
epix_engine/font/src/: font.cpp  font_ogl.cpp  font_vk.cpp
epix_engine/font/src/shaders/: fragment_shader.h  shader.geom  vertex_shader.h
epix_engine/grid2d/: CMakeLists.txt
epix_engine/grid2d/src/: grid2d.cpp
epix_engine/imgui/: CMakeLists.txt
epix_engine/imgui/include/epix/: imgui.h
epix_engine/imgui/include/pixel_engine/: imgui.h
epix_engine/imgui/src/: imgui.cpp  resources.cpp  systems.cpp
epix_engine/physics2d/: CMakeLists.txt
epix_engine/physics2d/include/epix/: physics2d.h
epix_engine/physics2d/src/: physics2d.cpp  utils.cpp
epix_engine/pixel_render/: CMakeLists.txt
epix_engine/pixel_render/src/: components.cpp  pixel.cpp
epix_engine/render_ogl/: CMakeLists.txt
epix_engine/render_ogl/include/epix/: render_ogl.h
epix_engine/render_ogl/src/: render_ogl.cpp  systems.cpp
epix_engine/render_ogl/test/: CMakeLists.txt  main.cpp
epix_engine/sand_physics/: CMakeLists.txt
epix_engine/sand_physics/src/: sand_phy.cpp
epix_engine/sprite/: CMakeLists.txt
epix_engine/sprite/include/epix/: sprite.h
epix_engine/sprite/include/pixel_engine/: sprite.h
epix_engine/sprite/src/: sprite.cpp  sprite_vk.cpp
epix_engine/window/: CMakeLists.txt
epix_engine/window/include/epix/: window.h
epix_engine/window/include/pixel_engine/: window.h
epix_engine/window/src/: components.cpp  resources.cpp  systems.cpp  window.cpp
examples/ecs/: CMakeLists.txt
examples/ecs/include/: basic_loop.h  event_test_with_condition_system.h  general_spawn_despawn.h  parallel_run_test.h  resource_test.h  spawn_with_child.h  state_nextstate.h
examples/ecs/include/ecs/: ecs.h  registry_wrapper.h
examples/ecs/src/: main.cpp
examples/vk-integration-trial/: CMakeLists.txt
examples/vk-integration-trial/include/: compileshader.bat  fragment_shader.h  integration.h  shader.frag  shader.vert  vertex_shader.h
examples/vk-integration-trial/src/: main.cpp
examples/window-gl/: CMakeLists.txt
examples/window-gl/include/: pipeline.h
examples/window-gl/src/: main.cpp
libs/imgui/: CMakeLists.txt
pixel_engine/: CMakeLists.txt
pixel_engine/app/: CMakeLists.txt
pixel_engine/app/examples/: CMakeLists.txt
pixel_engine/app/examples/core/: CMakeLists.txt  main.cpp
pixel_engine/app/include/pixel_engine/: app.h
pixel_engine/app/src/: app.cpp  command.cpp
pixel_engine/app/tests/: CMakeLists.txt
pixel_engine/app_v2/: CMakeLists.txt
pixel_engine/app_v2/include/pixel_engine/: app.h
pixel_engine/app_v2/src/: app.cpp  command.cpp  runner.cpp  runner_tools.cpp  stage_runner.cpp  subapp.cpp  substage_runner.cpp  tools.cpp
pixel_engine/app_v2/tests/: CMakeLists.txt
pixel_engine/app_v2/tests/src/: test.cpp
pixel_engine/common/include/pixel_engine/: common.h
pixel_engine/debug_draw/: CMakeLists.txt
pixel_engine/debug_draw/src/: components.cpp  debug_draw.cpp  systems.cpp
pixel_engine/debug_draw/src/shaders/: compileshader.bat  shader.vert
pixel_engine/font/: CMakeLists.txt
pixel_engine/font/include/pixel_engine/: font.h
pixel_engine/font/src/: font.cpp  font_ogl.cpp  font_vk.cpp
pixel_engine/font/src/shaders/: compile_shader.bat  fragment_shader.h  geometry_shader.h  shader.frag  shader.vert  vertex_shader.h
pixel_engine/imgui/: CMakeLists.txt
pixel_engine/imgui/include/pixel_engine/: imgui.h
pixel_engine/imgui/src/: imgui.cpp  systems.cpp
pixel_engine/include/pixel_engine/: context.h  core.h  entity.h  input.h  prelude.h  render.h
pixel_engine/include/pixel_engine/asset_server_gl/: asset_server_gl.h  resources.h  systems.h
pixel_engine/include/pixel_engine/camera/: components.h
pixel_engine/include/pixel_engine/components/: components.h
pixel_engine/include/pixel_engine/entity/: command.h  entity.h  event.h  query.h  resource.h  scheduler.h  state.h  system.h
pixel_engine/include/pixel_engine/font_gl/: components.h  font.h  resources.h  systems.h
pixel_engine/include/pixel_engine/path_voxel/: components.h  path_voxel.h  systems.h
pixel_engine/include/pixel_engine/pixel_render_gl/: components.h  pixel_render_gl.h  systems.h
pixel_engine/include/pixel_engine/plugins/: asset_server_gl.h  render_gl.h  sprite_render_gl.h  window_gl.h
pixel_engine/include/pixel_engine/render/: renderer_gl.h  vk_helper.h
pixel_engine/input/: CMakeLists.txt
pixel_engine/input/src/: components.cpp  input.cpp
pixel_engine/physics2d/: CMakeLists.txt
pixel_engine/physics2d/src/: physics2d.cpp  utils.cpp
pixel_engine/pixel_render/: CMakeLists.txt
pixel_engine/pixel_render/src/: components.cpp  pixel.cpp
pixel_engine/render_ogl/: CMakeLists.txt
pixel_engine/render_ogl/src/: render_ogl.cpp  systems.cpp
pixel_engine/render_ogl/test/: CMakeLists.txt  main.cpp
pixel_engine/render_vk/: CMakeLists.txt
pixel_engine/render_vk/src/: components.cpp  render_vk.cpp  systems.cpp  vulkan.cpp
pixel_engine/sand/: CMakeLists.txt
pixel_engine/sand/src/: element_registry.cpp
pixel_engine/sprite/: CMakeLists.txt
pixel_engine/sprite/src/: sprite.cpp  sprite_vk.cpp
pixel_engine/src/pixel_engine/: asset_server_gl.cpp  camera.cpp  context.cpp  core.cpp  entity.cpp  font_gl.cpp  input.cpp  path_voxel.cpp  pixel_render_gl.cpp  plugins.cpp  prelude.cpp  render.cpp  render_gl.cpp  render_vk.cpp  sprite_render_gl.cpp  task_queue.cpp  transform.cpp  window.cpp
pixel_engine/vulkan_graph/: CMakeLists.txt
pixel_engine/window/: CMakeLists.txt
pixel_engine/window/src/: components.cpp  resources.cpp  systems.cpp  window.cpp
src/: main.cpp
(+235 files in other folders)
