cmake_minimum_required (VERSION 3.21)

file(GLOB_RECURSE MODULE_SOURCES "src/*.c" "src/*.cpp")
list(APPEND ENGINE_SOURCES ${MODULE_SOURCES})
list(APPEND ENGINE_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_subdirectory(common)
add_subdirectory(app)
add_subdirectory(window)
add_subdirectory(input)
add_subdirectory(render_ogl)
add_subdirectory(vulkan_graph)
add_subdirectory(render_vk)
add_subdirectory(imgui)
add_subdirectory(debug_draw)
add_subdirectory(font)
add_subdirectory(sprite)
add_subdirectory(pixel_render)
add_subdirectory(sand)

# BUILD STATIC
add_library(pixel_engine STATIC ${MODULE_SOURCES})
target_include_directories(pixel_engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(pixel_engine PUBLIC ../libs/stb)
target_link_libraries (pixel_engine PUBLIC epix_common)
target_link_libraries (pixel_engine PUBLIC glfw)
target_link_libraries (pixel_engine PUBLIC OpenGL::GL)
target_link_libraries (pixel_engine PUBLIC glad)
target_link_libraries (pixel_engine PUBLIC Vulkan::Vulkan)
target_link_libraries (pixel_engine PUBLIC EnTT::EnTT)
target_link_libraries (pixel_engine PUBLIC spdlog::spdlog)
target_link_libraries (pixel_engine PUBLIC Boost::pfr)
target_link_libraries (pixel_engine PUBLIC BSThreadPool)
target_link_libraries (pixel_engine PUBLIC glm::glm)
target_link_libraries (pixel_engine PUBLIC freetype)
target_link_libraries (pixel_engine PUBLIC VulkanMemoryAllocator)
target_link_libraries (pixel_engine PUBLIC pixel_engine::app)
target_link_libraries (pixel_engine PUBLIC pixel_engine::window)
target_link_libraries (pixel_engine PUBLIC pixel_engine::input)
target_link_libraries (pixel_engine PUBLIC pixel_engine::render::vulkan)
target_link_libraries (pixel_engine PUBLIC pixel_engine::render::debug)
target_link_libraries (pixel_engine PUBLIC pixel_engine::imgui)
target_link_libraries (pixel_engine PUBLIC pixel_engine::render::font)
target_link_libraries (pixel_engine PUBLIC pixel_engine::render::sprite)
target_link_libraries (pixel_engine PUBLIC pixel_engine::render::pixel)
target_link_libraries (pixel_engine PUBLIC pixel_engine::world::sand)

# BUILD SHARED
# ADD IMGUI SOURCES AND INCLUDES
set(ENGINE_SOURCES ${ENGINE_SOURCES} ${IMGUI_SOURCES})
add_library(pixel_engine_shared SHARED ${ENGINE_SOURCES})
target_compile_definitions(pixel_engine_shared PRIVATE EPIX_BUILD_SHARED)
target_include_directories(pixel_engine_shared PUBLIC ${ENGINE_INCLUDES})
target_include_directories(pixel_engine_shared PRIVATE ../libs/stb)
target_link_libraries (pixel_engine_shared PUBLIC epix_common)
target_link_libraries (pixel_engine_shared PUBLIC sparsepp)
target_link_libraries (pixel_engine_shared PUBLIC imgui)
target_link_libraries (pixel_engine_shared PUBLIC glfw)
target_link_libraries (pixel_engine_shared PUBLIC OpenGL::GL)
target_link_libraries (pixel_engine_shared PUBLIC glad)
target_link_libraries (pixel_engine_shared PUBLIC Vulkan::Vulkan)
target_link_libraries (pixel_engine_shared PUBLIC EnTT::EnTT)
target_link_libraries (pixel_engine_shared PUBLIC spdlog::spdlog)
target_link_libraries (pixel_engine_shared PUBLIC Boost::pfr)
target_link_libraries (pixel_engine_shared PUBLIC BSThreadPool)
target_link_libraries (pixel_engine_shared PUBLIC glm::glm)
target_link_libraries (pixel_engine_shared PUBLIC freetype)
target_link_libraries (pixel_engine_shared PUBLIC VulkanMemoryAllocator)
