cmake_minimum_required(VERSION 3.21)

file(GLOB_RECURSE MODULE_SOURCES "src/*.c" "src/*.cpp")
set(ENGINE_SOURCES ${ENGINE_SOURCES} ${MODULE_SOURCES} PARENT_SCOPE)
set(ENGINE_INCLUDES ${ENGINE_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR}/include PARENT_SCOPE)
add_library(epix_sand_physics STATIC ${MODULE_SOURCES})
target_include_directories(epix_sand_physics PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

target_link_libraries(epix_sand_physics PUBLIC epix::app)
target_link_libraries(epix_sand_physics PUBLIC epix::physics::2d)
target_link_libraries(epix_sand_physics PUBLIC epix::world::sand)

add_library(epix::world::sand_physics ALIAS epix_sand_physics)