cmake_minimum_required(VERSION 3.21)

file(GLOB_RECURSE MODULE_SOURCES "src/*.c" "src/*.cpp")
set(ENGINE_SOURCES ${ENGINE_SOURCES} ${MODULE_SOURCES} PARENT_SCOPE)
set(ENGINE_INCLUDES ${ENGINE_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR}/include PARENT_SCOPE)
add_library(epix_rdvk STATIC ${MODULE_SOURCES})
target_include_directories(epix_rdvk PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

target_link_libraries(epix_rdvk spdlog::spdlog)
target_link_libraries(epix_rdvk Vulkan::Vulkan)
target_link_libraries(epix_rdvk VulkanMemoryAllocator)
target_link_libraries(epix_rdvk glm::glm)
target_link_libraries(epix_rdvk glfw)
target_link_libraries(epix_rdvk pixel_engine::app)
target_link_libraries(epix_rdvk pixel_engine::window)
target_link_libraries(epix_rdvk fmt)

add_library(pixel_engine::render::vulkan ALIAS epix_rdvk)
add_library(epix::render::vulkan ALIAS epix_rdvk)